fix: update gap of card layout

--- a/packages/core/src/styles/CardLayout.scss
+++ b/packages/core/src/styles/CardLayout.scss
@@ -3,7 +3,7 @@
 
 .#{$prefix}-card-layout {
   display: flex;
-  gap: 16px;
+  gap: 12px;
 
   &--row {
     flex-direction: row;
